--- a/Dockerfile.proxy_template
+++ b/Dockerfile.proxy_template
@@ -1,18 +1,19 @@
-FROM ubuntu:18.04
+FROM image
 
 ENV PROXY_USER userid
 ENV PROXY_PASSWORD password
-ENV PROXY_SERVER abc.abc.abc.jp
+ENV PROXY_SERVER myserver.net
 ENV PROXY_PORT 80
 
 ENV PROXY_FULL http://${PROXY_USER}:${PROXY_PASSWORD}@${PROXY_SERVER}:${PROXY_PORT}
 
-ENV HTTP_PROXY $PROXY_FULL
-ENV HTTPS_PROXY $PROXY_FULL
-ENV FTP_PROXY $PROXY_FULL
-ENV http_proxy $PROXY_FULL
-ENV https_proxy $PROXY_FULL
-ENV ftp_proxy $PROXY_FULL
+###ENVIRONMENT
+#ENV HTTP_PROXY $PROXY_FULL
+#ENV HTTPS_PROXY $PROXY_FULL
+#ENV FTP_PROXY $PROXY_FULL
+#ENV http_proxy $PROXY_FULL
+#ENV https_proxy $PROXY_FULL
+#ENV ftp_proxy $PROXY_FULL
 
 ###APT
 #RUN echo Aquire::ftp::proxy '"'${PROXY_FULL}'";' >> /etc/apt/apt.conf
