--- a/Dockerfile.proxy_template
+++ b/Dockerfile.proxy_template
@@ -48,3 +48,8 @@ RUN echo ftp_proxy = ${PROXY_FULL} >> /root/.wgetrc
 
 ###CURL
 RUN echo proxy=${PROXY_FULL} >> /root/.curlrc
+
+RUN echo Done for your PROXY
+
+### NORMAL Dockerfile description follows bellow
+
